Restructuring the project

--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
 					</button>
 				</div>
 			</header>
-			<div class="search-meals" id="search-meals"></div>
 			<div class="fav-meals">
 				<header class="header-fav-meals">Favorite Meals</header>
 				<ul id="ul-favorite-meals"></ul>
+				<p id="no-fav-meals" class="no-fav-meals">
+					No favorite meals yet.
+				</p>
 			</div>
-			<div class="search-meal" id="search-meal"></div>
 			<div class="random-meal" id="random-meal"></div>
+			<div class="search-meals" id="search-meals"></div>
 		</div>
 	</body>
 </html>
