Search by name implemented

--- a/index.html
+++ b/index.html
@@ -37,19 +37,7 @@
 			</div>
 			<div class="random-meal" id="random-meal"></div>
 			<div class="search-meals" id="search-meals">
-				<div class="searched-meal">
-					<img
-						class="img-searched-meal"
-						src="https://www.themealdb.com/images/media/meals/58oia61564916529.jpg"
-						alt=""
-					/>
-					<div class="searched-meal-info">
-						<h5 class="searched-meal-title">
-							<a>Arroz com Batata</a>
-						</h5>
-						<i id="meal-img-heart" class="far fa-heart"></i>
-					</div>
-				</div>
+				<div class="searched-meal"></div>
 			</div>
 		</div>
 	</body>
