--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 				</p>
 			</div>
 			<div class="random-meal" id="random-meal"></div>
-			<div class="search-meals" id="search-meals">
-				<div class="searched-meal"></div>
-			</div>
+			<div class="search-meals" id="search-meals"></div>
 		</div>
 	</body>
 </html>
